plugins {
	id 'java'
}

allprojects {
	sourceCompatibility = 1.8
	targetCompatibility = 1.8
}

sourceSets {
	main {
		java {
			srcDir 'src'
			outputDir = file('war/WEB-INF/classes')
		}
		output.resourcesDir = 'war/WEB-INF/classes'
	}
}

dependencies {
	implementation files(eclipseClasspath(project))
}
